--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <header></header>
+    <header> </header>
 
     <main>
         <div class="containerListaProdutos" id="listProdutos">
@@ -24,7 +24,7 @@
         </div>
 
         <div class="containerPrecoTotal">
-            <p>Preço total: R$<span id="precoTotal"></span></p>
+            <p>Preço total: R$<span id="precoTotal">00.00</span></p>
         </div>
     </main>
 </body>
